<resources>
    <string name="app_name">Gasto_Viagem</string>
    <string name="distancia">Distância\n</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco_por_litro">Preço por litro:</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia:</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="calcular">CALCULAR</string>
    <string name="rs">R$:</string>
    <string name="gasto_total">GASTO TOTAL:</string>
</resources>